--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1 class="message">Para la más bonita del mundo</h1>
-   <h1 class="message">Te amo mucho Jimena </h1>
+  <h2 class="message">Te amo mucho Jimena❤️ </h2>
 
   <!-- Snoopy -->
   <img class="snoopy" src="https://i.ibb.co/p4Xz7w0/snoopy-girasoles.png" alt="Snoopy con girasoles">
