--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h2 class="message">Te amo mucho Jimena❤️ </h2>
 
   <!-- Snoopy -->
-  <img class="snoopy" src="https://i.ibb.co/p4Xz7w0/snoopy-girasoles.png" alt="Snoopy con girasoles">
+  <img class="snoopy" src="https://i.pinimg.com/736x/67/37/62/6737622dd8cfc2d85aa073694270d1b3.jpg" alt="Snoopy con girasoles">
 
   <script src="script.js"></script>
 </body>
